--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "dependencies": {
     "@sanity/client": "^3.3.0",
     "@sanity/image-url": "^1.0.1",
+    "@thirdweb-dev/react": "^2.2.6",
+    "@thirdweb-dev/sdk": "^2.2.5",
+    "ethers": "^5.6.5",
     "next": "12.1.5",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "eslint": "8.14.0",
